--- a/traininig.yaml
+++ b/traininig.yaml
@@ -1,7 +1,7 @@
 # A config file for traininig PWCNet
 
 sintel:
-  directory: '/Users/Daigo/Data/MPI-Sintel-complete'
+  directory: 'MPI-Sintel'
   mode: 'clean'
 
 preprocess:
@@ -16,6 +16,7 @@ model:
 train:
   epochs: 10
   batch_size: 4
+  gamma: 0.0004
   optimizer:
     learning_rate: 0.0001
     beta_1: 0.9
